# ou_self_drive_ros-master

ou_self_drive_ros-master/: README.md
ou_self_drive_ros-master/lane_detection/cfg/: LaneDetection.cfg
ou_self_drive_ros-master/lane_detection/launch/: test_projection.launch
ou_self_drive_ros-master/lane_detection/yaml/: lane_camera.yaml
ou_self_drive_ros-master/sign_detection/: CMakeLists.txt  package.xml
ou_self_drive_ros-master/yolo/src/: YOLO.cpp  YOLONode.cpp
